2010-07-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dirty.cpp: UpdateLayout: don't cache the # of layers, it may change while
	looping over them. Fixes a crash with #869.

2010-07-20  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Since setting
	ViewportOrigin/Width checks against the pan/zoom targets to check
	if the values have changed, set these targets to NAN before
	calling SetViewportOrigin/Width() when the UseSprings property is
	disabled. Fixes the ChangeUseSprings moon-unit test.

2010-07-20  Alan McGovern  <amcgovern@novell.com>

	* fontmanager.cpp: Use the correct value when calling the base
	  method. Thanks rolf!

2010-07-19  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnPropertyChanged): Only emit
	ViewportChanged event if UseSprings is enabled. Don't update
	InternalViewport properties unless they've actually changed.

2010-07-19  David Reveman  <davidr@novell.com>

	* frameworkelement.cpp: Use GetBounds/GetSubtreeBounds and
	absolute projection in FindElementsInHostCoordinates.

2010-07-19  Larry Ewing  <lewing@novell.com>

	* thickness.h:
	* cornerradius.h: Add new ApplyFlow methods to deal with the new
	FlowDirection logic.

	* border.cpp: Use apply Flow to modify the border rendering based
	on the flowdirection.

	* frameworkelement.cpp: make flowdirection change invalidate the
	layout.

2010-07-19  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp: Fixed to properly handle NULL returns from
	qtree_insert(). Fixes a crash in the Seadragon-InvalidXml drt.

2010-07-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/im-gtk.cpp|h: Fix the random shutdown crash here by clearing the
	client window when the parent widget is destroyed.

2010-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp: Initialize a variable to make valgrind happy.

2010-07-16  Jeffrey Stedfast  <fejj@novell.com>

	Fixes drt 2004.

	* multiscaleimage.cpp (StopDownloading): Need to reset